--- a/naver-spring-batch-extension-test/src/main/resources/application.properties
+++ b/naver-spring-batch-extension-test/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.h2.console.enabled=true
-
+spring.datasource.initialize=true
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/h2-db
+spring.datasource.url=jdbc:h2:file:~/naver-spring-batch-db
 spring.datasource.username=sa
 spring.datasource.password=
 
+#spring.batch.initializer.enabled=true
 spring.batch.job.enabled=false
+
+logging.level.com.naver.spring.batch.extension=debug
