--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
 	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-ex</artifactId>
 	<packaging>pom</packaging>
-	<version>0.1.0</version>
+	<version>${revision}</version>
+
+	<properties>
+		<revision>0.1.0-SNAPSHOT</revision>
+	</properties>
 
 	<modules>
 		<module>naver-spring-batch-extension</module>
