(sample) batch JdbcRepository 로 사용하도록 수정

--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:h2:file:~/naver-spring-batch-db
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.batch.initializer.enabled=false
+spring.batch.initializer.enabled=true
 
 logging.level.root=info
 logging.level.com.naver.spring.batch.sample=debug
