(sample) bean validation job test

--- a/naver-spring-batch-example/pom.xml
+++ b/naver-spring-batch-example/pom.xml
@@ -60,12 +60,12 @@
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.9.Final</version>
+			<version>6.0.10.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
-			<version>6.0.9.Final</version>
+			<version>6.0.10.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
@@ -88,6 +88,11 @@
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
 		</dependency>
 	</dependencies>
 
