(sample4) UnmodifiedFilterItemProcessor Test

--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.initialize=true
+spring.datasource.platform=h2
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:~/naver-spring-batch-db
 spring.datasource.username=sa
@@ -7,5 +9,6 @@ spring.datasource.password=
 spring.batch.initializer.enabled=true
 
 logging.level.root=info
-logging.level.com.naver.spring.batch.sample=debug
-logging.level.org.springframework.batch=info
+logging.level.com.naver.spring.batch=debug
+logging.level.org.springframework.batch=debug
+#logging.level.org.springframework.jdbc=debug
