--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -19,6 +19,7 @@
 		<spring-batch.version>3.0.9.RELEASE</spring-batch.version>
 		<jackson.version>2.9.2</jackson.version>
 		<slf4j-api.version>1.7.25</slf4j-api.version>
+		<logback.version>1.2.3</logback.version>
 	</properties>
 
 	<distributionManagement>
@@ -60,9 +61,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -89,6 +90,19 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>${jackson.version}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
