Add Test for SimpleBeanJdbcPagingItemReader

--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.batch.initializer.enabled=true
+spring.batch.job.enabled=false
 
 logging.level.root=info
 logging.level.com.naver.spring.batch=debug
