--- a/naver-spring-batch-example/pom.xml
+++ b/naver-spring-batch-example/pom.xml
@@ -2,8 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-example</artifactId>
 	<version>${revision}</version>
 	<packaging>jar</packaging>
@@ -12,10 +10,9 @@
 	<description>Naver spring batch extension examples</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.12.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.naver.spring.batch</groupId>
+		<artifactId>naver-spring-batch-ex</artifactId>
+		<version>dev</version>
 	</parent>
 
 	<properties>
@@ -23,6 +20,18 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>1.5.12.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -37,7 +46,7 @@
 		<dependency>
 			<groupId>com.naver.spring.batch</groupId>
 			<artifactId>naver-spring-batch-extension</artifactId>
-			<version>${project.version}</version>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
