--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -2,14 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-extension</artifactId>
 	<version>${revision}</version>
 	<packaging>jar</packaging>
 
 	<name>naver-spring-batch-extension</name>
 	<description>Naver spring batch extension</description>
+
+	<parent>
+		<groupId>com.naver.spring.batch</groupId>
+		<artifactId>naver-spring-batch-ex</artifactId>
+		<version>dev</version>
+	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
