--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-ex</artifactId>
 	<packaging>pom</packaging>
-	<version>${revision}</version>
+	<version>dev</version>
 
 	<properties>
 		<revision>0.1.0-SNAPSHOT</revision>
