--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.batch.initializer.enabled=true
 spring.batch.job.enabled=false
 
 logging.level.root=info
-logging.level.com.naver.spring.batch=debug
-logging.level.org.springframework.batch=debug
+logging.level.com.naver.spring.batch.sample=debug
+#logging.level.org.springframework.batch=debug
 #logging.level.org.springframework.jdbc=debug
