--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -1,11 +1,5 @@
+spring.profiles.active=h2
 spring.datasource.initialize=true
-spring.datasource.platform=h2
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/naver-spring-batch-db
-spring.datasource.username=sa
-spring.datasource.password=
-
 spring.batch.initializer.enabled=true
 spring.batch.job.enabled=false
 
