--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,19 @@
 		<module>naver-spring-batch-extension</module>
 		<module>naver-spring-batch-example</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>none</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
