--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -24,6 +24,7 @@
 		<jackson.version>2.9.6</jackson.version>
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<logback.version>1.2.3</logback.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
 	</properties>
 
 	<distributionManagement>
@@ -79,7 +80,7 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>2.0.1.Final</version>
+			<version>${validation-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
