--- a/naver-spring-batch-example/pom.xml
+++ b/naver-spring-batch-example/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>naver-spring-batch-example</artifactId>
-	<version>${revision}</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>naver-spring-batch-example</name>
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.naver.spring.batch</groupId>
 		<artifactId>naver-spring-batch-ex</artifactId>
-		<version>dev</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>com.naver.spring.batch</groupId>
 			<artifactId>naver-spring-batch-extension</artifactId>
-			<version>${revision}</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
