--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
 	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-ex</artifactId>
 	<packaging>pom</packaging>
-	<version>dev</version>
+	<version>0.1.0-SNAPSHOT</version>
 
 	<properties>
-		<revision>0.1.0-SNAPSHOT</revision>
 		<jackson.version>2.9.6</jackson.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -20,6 +19,11 @@
 		<module>naver-spring-batch-extension</module>
 		<module>naver-spring-batch-example</module>
 	</modules>
+	<scm>
+		<connection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</connection>
+		<url>https://github.com/naver/naver-spring-batch-ex</url>
+		<developerConnection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</developerConnection>
+	</scm>
 
 	<build>
 		<plugins>
@@ -32,6 +36,15 @@
 						<phase>none</phase>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
