--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -16,6 +16,7 @@
 		<java.version>1.8</java.version>
 		<spring.version>4.3.22.RELEASE</spring.version>
 		<spring-batch.version>3.0.10.RELEASE</spring-batch.version>
+		<spring-data-redis.version>2.1.4.RELEASE</spring-data-redis.version>
 		<jackson.version>2.9.8</jackson.version>
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<logback.version>1.2.3</logback.version>
@@ -80,6 +81,12 @@
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-infrastructure</artifactId>
 			<version>${spring-batch.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>${spring-data-redis.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
