--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -9,6 +9,7 @@
 
 	<name>naver-spring-batch-extension</name>
 	<description>Naver spring batch extension</description>
+	<url>https://github.com/naver/naver-spring-batch-ex</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,16 +25,31 @@
 
 	<distributionManagement>
 		<repository>
-			<id>navercorp.release</id>
-			<name>Naver Corp. Release Repository</name>
-			<url>http://repo.navercorp.com/maven2</url>
+			<id>naver-spring-batch-extension</id>
+			<url>https://api.bintray.com/maven/fomuon/com.naver.spring.batch/naver-spring-batch-extension/;publish=1</url>
 		</repository>
-		<snapshotRepository>
-			<id>navercorp.snapshot</id>
-			<name>Navercorp Snapshot Repository</name>
-			<url>http://repo.navercorp.com/m2-snapshot-repository</url>
-		</snapshotRepository>
 	</distributionManagement>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>https://opensource.org/licenses/Apache-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>fomuon</name>
+			<email>fomuon@gmail.com</email>
+		</developer>
+	</developers>
+
+	<scm>
+		<url>https://github.com/naver/naver-spring-batch-ex</url>
+		<connection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</connection>
+		<developerConnection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</developerConnection>
+	</scm>
 
 	<dependencies>
 		<dependency>
@@ -166,6 +182,29 @@
 				<configuration>
 					<updateReleaseInfo>true</updateReleaseInfo>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
