--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-ex</artifactId>
 	<packaging>pom</packaging>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 
 	<modules>
 		<module>naver-spring-batch-extension</module>
