--- a/naver-spring-batch-extension/pom.xml
+++ b/naver-spring-batch-extension/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.naver.spring.batch</groupId>
 	<artifactId>naver-spring-batch-extension</artifactId>
-	<version>1.0.1</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>naver-spring-batch-extension</name>
@@ -48,7 +48,7 @@
 		<url>https://github.com/naver/naver-spring-batch-ex</url>
 		<connection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</connection>
 		<developerConnection>scm:git:https://github.com/naver/naver-spring-batch-ex.git</developerConnection>
-	  <tag>1.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<dependencies>
