--- a/naver-spring-batch-example/src/main/resources/application.properties
+++ b/naver-spring-batch-example/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.level.root=info
 logging.level.com.naver.spring.batch.sample=debug
 #logging.level.org.springframework.batch=debug
 #logging.level.org.springframework.jdbc=debug
+
+spring.redis.host=localhost
+spring.redis.port=6379
